fix: avatar squish issue [FRON-2634]

--- a/apps/provider/src/styles/shared/_avatar.scss
+++ b/apps/provider/src/styles/shared/_avatar.scss
@@ -40,8 +40,9 @@ ccr-avatar {
     img {
       // max-height: 100%; // FIXME this fits the width
       max-width: 100%;
-      height: 100%;
+      height: auto;
       width: 100%;
+      object-fit: cover;
     }
   }
 
